cd/app/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: chess-with-actors
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chess-ui
  template:
    metadata:
      labels:
        app: chess-ui
    spec:
      containers:
        - name: ui
          image: aaronjamesford/chess-ui:main-34 # {"$imagepolicy": "flux-system:chess-ui"}
          resources:
            limits:
              memory: "200Mi"
              cpu: "100m"
            requests:
              memory: "200Mi"
              cpu: "100m"
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: "/assets/app.config.json"
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/assets/app.config.json"
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: "/usr/share/nginx/html/assets/app.config.json"
              subPath: "app.config.json"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: chess-ui
