cd/app/ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chess-ui
  namespace: chess-with-actors
spec:
  selector:
    app: chess-ui
  type: NodePort
  ports:
    - port: 80
      nodePort: 32000
