cd/app/ui/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1  
kind: IngressRoute  
metadata:  
  name: chess-ui
  namespace: chess-with-actors
spec:  
  entryPoints:
    - web
  routes:
  - match: Host(`chess.localhost`) && Path(`/`)
    kind: Rule
    services:
    - name: chess-ui
      port: 80
